tests/neg/unused-lazy-val.scala
object Test {
  unused lazy val i: Int = 1 // error
}
